fixed overflow & navbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* * {
-  outline: 1px solid red;
-} */
+
+html,
+body {
+  overflow-x: hidden;
+}
 
 @layer base {
   :root {
